--- a/src/hw1.ipynb
+++ b/src/hw1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +175,107 @@
    ],
    "source": [
     "find_gaps(\"out_gapClosed.fa\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Бонусная часть:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Общее число контигов: 6\n",
+      "Их общая длина: 800\n",
+      "Длина самого длинного контига: 275\n",
+      "N50: 113\n"
+     ]
+    }
+   ],
+   "source": [
+    "analyze(\"bonus/bonus_contig.fa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Общее число скаффолдов: 4\n",
+      "Их общая длина: 619\n",
+      "Длина самого длинного скаффолда: 275\n",
+      "N50: 124\n"
+     ]
+    }
+   ],
+   "source": [
+    "analyze(\"bonus/bonus_scaffold.fa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество гэпов: 0\n",
+      "Общая длина: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_gaps(\"bonus/bonus_contig.fa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество гэпов: 0\n",
+      "Общая длина: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_gaps(\"bonus/bonus_scaffold.fa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество гэпов: 0\n",
+      "Общая длина: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_gaps(\"bonus/bonus_gapClosed.fa\")"
    ]
   }
  ],
